Added package description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Tamir Bahar"]
 homepage = "https://github.com/lostutils/uq"
 license = "MIT"
+description = "sort | uniq alternative."
 
 [dependencies]
 clap = "2.29.2" 
