--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ description = "sort | uniq alternative."
 readme = "README.md"
 
 [dependencies]
-clap = "2.29.2" 
+clap = "2.29.2"
+fxhash = "0.2"
 
 [[bin]]
 name = "uq"
