--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 [dependencies]
 clap = "2.29.2"
 fxhash = "0.2"
+regex = "1.0.0"
+itertools = "0.7.8"
 
 [profile.release]
 lto = true
