--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ clap = "2.29.2"
 fxhash = "0.2"
 regex = "1.0.0"
 itertools = "0.7.8"
+failure = "0.1.1"
+failure_derive = "0.1.1"
+serde_derive = "1.0.62"
 
 [profile.release]
 lto = true
